; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_delete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.peer_svc = type { i32 }
%struct.peer = type { i32 }

@BLE_HS_ENOTCONN = common dso_local global i32 0, align 4
@peers = common dso_local global i32 0, align 4
@next = common dso_local global i32 0, align 4
@peer_pool = common dso_local global i32 0, align 4
@BLE_HS_EOS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @peer_delete(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.peer_svc*, align 8
  %5 = alloca %struct.peer*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.peer* @peer_find(i32 %7)
  store %struct.peer* %8, %struct.peer** %5, align 8
  %9 = load %struct.peer*, %struct.peer** %5, align 8
  %10 = icmp eq %struct.peer* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @BLE_HS_ENOTCONN, align 4
  store i32 %12, i32* %2, align 4
  br label %38

13:                                               ; preds = %1
  %14 = load %struct.peer*, %struct.peer** %5, align 8
  %15 = load %struct.peer*, %struct.peer** %5, align 8
  %16 = load i32, i32* @next, align 4
  %17 = call i32 @SLIST_REMOVE(i32* @peers, %struct.peer* %14, %struct.peer* %15, i32 %16)
  br label %18

18:                                               ; preds = %23, %13
  %19 = load %struct.peer*, %struct.peer** %5, align 8
  %20 = getelementptr inbounds %struct.peer, %struct.peer* %19, i32 0, i32 0
  %21 = call %struct.peer_svc* @SLIST_FIRST(i32* %20)
  store %struct.peer_svc* %21, %struct.peer_svc** %4, align 8
  %22 = icmp ne %struct.peer_svc* %21, null
  br i1 %22, label %23, label %30

23:                                               ; preds = %18
  %24 = load %struct.peer*, %struct.peer** %5, align 8
  %25 = getelementptr inbounds %struct.peer, %struct.peer* %24, i32 0, i32 0
  %26 = load i32, i32* @next, align 4
  %27 = call i32 @SLIST_REMOVE_HEAD(i32* %25, i32 %26)
  %28 = load %struct.peer_svc*, %struct.peer_svc** %4, align 8
  %29 = call i32 @peer_svc_delete(%struct.peer_svc* %28)
  br label %18

30:                                               ; preds = %18
  %31 = load %struct.peer*, %struct.peer** %5, align 8
  %32 = call i32 @os_memblock_put(i32* @peer_pool, %struct.peer* %31)
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %30
  %36 = load i32, i32* @BLE_HS_EOS, align 4
  store i32 %36, i32* %2, align 4
  br label %38

37:                                               ; preds = %30
  store i32 0, i32* %2, align 4
  br label %38

38:                                               ; preds = %37, %35, %11
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local %struct.peer* @peer_find(i32) #1

declare dso_local i32 @SLIST_REMOVE(i32*, %struct.peer*, %struct.peer*, i32) #1

declare dso_local %struct.peer_svc* @SLIST_FIRST(i32*) #1

declare dso_local i32 @SLIST_REMOVE_HEAD(i32*, i32) #1

declare dso_local i32 @peer_svc_delete(%struct.peer_svc*) #1

declare dso_local i32 @os_memblock_put(i32*, %struct.peer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
